--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "server/server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "prestart": "npm run compile:templates",
         "start": "DEBUG=* && node server/server.js",
+        "compile:templates": "handlebars public/Components/**/*.hbs -f public/Components/precompiledTemplates.js",
         "lint": "eslint --fix .",
         "prepare": "husky install"
     },
