--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "start": "DEBUG=* && node server/server.js",
         "lint": "eslint --fix .",
         "prepare": "husky install",
-
         "build": "webpack",
-
         "sass": "sass src/styles/main.scss public/styles/main.css",
         "sass:watch": "sass --watch src/styles/main.scss public/styles/main.css"
     },
@@ -29,6 +27,7 @@
     "devDependencies": {
         "@eslint/js": "^9.21.0",
         "babel-eslint": "^10.1.0",
+        "css-loader": "^7.1.2",
         "eslint": "^8.57.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^10.0.2",
@@ -40,6 +39,8 @@
         "lint-staged": "^15.4.3",
         "prettier": "3.5.3",
         "sass": "^1.86.3",
+        "sass-loader": "^16.0.5",
+        "style-loader": "^4.0.0",
         "webpack": "^5.98.0",
         "webpack-cli": "^6.0.1"
     },
