--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "globals": "^16.0.0",
         "husky": "^8.0.3",
         "lint-staged": "^15.4.3",
+        "mini-css-extract-plugin": "^2.9.2",
         "prettier": "3.5.3",
         "sass": "^1.86.3",
         "sass-loader": "^16.0.5",
