--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "express": "^4.21.0",
         "handlebars": "^4.7.8",
         "morgan": "^1.10.0",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "ws": "^8.18.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
