--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
         "ws": "^8.18.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.26.10",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-typescript": "^7.27.0",
         "@eslint/js": "^9.21.0",
         "babel-eslint": "^10.1.0",
+        "babel-loader": "^10.0.0",
         "css-loader": "^7.1.2",
         "eslint": "^8.57.1",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -43,6 +47,7 @@
         "sass": "^1.86.3",
         "sass-loader": "^16.0.5",
         "style-loader": "^4.0.0",
+        "typescript": "^5.8.3",
         "webpack": "^5.98.0",
         "webpack-cli": "^6.0.1"
     },
