--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@eslint/js": "^9.21.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^10.0.0",
+        "copy-webpack-plugin": "^13.0.0",
         "css-loader": "^7.1.2",
         "eslint": "^8.57.1",
         "eslint-config-airbnb-base": "^15.0.0",
