--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules/
 .DS_Store
 ../../МГТУ/VK_technopark/Second Sem/2025_1_QuickFlow/.idea
-.idea/
+# .idea/
 
 public/bundle.js
 public/bundle.js.map
