--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "QuickFlow",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#fff",
-    "theme_color": "#fff",
+    "background_color": "#f5f6f7",
+    "theme_color": "#f5f6f7",
     "icons": [
         {
             "src": "/icons/icon-128x128.svg",
