--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "DEBUG=* && node server/server.js",
+        "dev": "DEBUG=* && node server/devServer.js",
         "lint": "eslint --fix .",
         "prepare": "husky install",
         "build": "webpack",
