--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "babel-loader": "^10.0.0",
         "copy-webpack-plugin": "^13.0.0",
         "css-loader": "^7.1.2",
+        "css-minimizer-webpack-plugin": "^7.0.2",
         "eslint": "^8.57.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^10.0.2",
@@ -42,12 +43,19 @@
         "eslint-plugin-prettier": "^5.2.3",
         "globals": "^16.0.0",
         "husky": "^8.0.3",
+        "image-minimizer-webpack-plugin": "^4.1.3",
+        "imagemin": "^9.0.1",
+        "imagemin-gifsicle": "^7.0.0",
+        "imagemin-jpegtran": "^8.0.0",
+        "imagemin-optipng": "^8.0.0",
+        "imagemin-svgo": "^11.0.1",
         "lint-staged": "^15.4.3",
         "mini-css-extract-plugin": "^2.9.2",
         "prettier": "3.5.3",
         "sass": "^1.86.3",
         "sass-loader": "^16.0.5",
         "style-loader": "^4.0.0",
+        "terser-webpack-plugin": "^5.3.14",
         "typescript": "^5.8.3",
         "webpack": "^5.98.0",
         "webpack-cli": "^6.0.1"
